# iot-embedded-systems

./: .env.template  .gitignore  LICENSE.txt  Readme.md  pyproject.toml  request.json  swagger.json
ESP32-S3/: boot.py  config.py  main.py  update.py
configs/: device_config.json
src/: main.py
src/agents/: agents.py
src/db/: __init__.py  database.py  main.py  seed.py
src/iot/: ESP32WebCam.h  Readme.md  ecg.cpp  ecg.ino  esp32cam.cpp  esp32cam.ino  mpu.cpp  mpu.ino  swagger.json
src/llm/: __init__.py  agent.py  system_prompt.txt
src/mcp_server/: main.py
src/mcp_server/tasks/: __init__.py  camera.py  ecg.py  system.py
src/tasks/: ota_task.py
src/utils/: chat.py  esp32cam.py  system.py
tools/: sensor_tools.py
utils/: chat.py  chat_utils.py  system.py  system_utils.py  utils.py
